--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "url": "https://davidthomason.com/"
   },
   "scripts": {
-    "lint": "vue-cli-service lint src/ tests/ --no-fix",
+    "lint": "vue-cli-service lint src/ cypress/ --no-fix",
+    "lint:fix": "vue-cli-service lint src/ cypress/ --fix",
     "packages:audit": "/bin/bash -c 'yarn audit --groups dependencies; [[ $? -ge 8 ]] && exit 1 || exit 0'",
     "packages:fix": "npm_config_yes=true npx yarn-audit-fix",
-    "electron:build": "vue-cli-service electron:build --dir",
     "electron:dev": "vue-cli-service electron:serve",
+    "electron:build": "vue-cli-service electron:build --dir",
     "electron:release": "vue-cli-service electron:build",
     "electron:serve": "electron dist_electron/bundled",
-    "lint:fix": "vue-cli-service lint src/ tests/ --fix",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "test": "yarn packages:audit && yarn run lint",
