--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: ./docker/test_cypress.sh
       - run:
           name: Stop production Docker contianer
-          command: docker stop devtrack-prod
+          command: docker stop pomotrack-prod
 
   build-web:
     docker:
