--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "url": "https://davidthomason.com/"
   },
   "scripts": {
-    "lint": "vue-cli-service lint src/ cypress/ --no-fix",
-    "lint:fix": "vue-cli-service lint src/ cypress/ --fix",
     "packages:audit": "/bin/bash -c 'yarn audit --groups dependencies; [[ $? -ge 8 ]] && exit 1 || exit 0'",
     "packages:fix": "npm_config_yes=true npx yarn-audit-fix",
-    "electron:dev": "vue-cli-service electron:serve",
-    "electron:build": "vue-cli-service electron:build --dir",
-    "electron:release": "vue-cli-service electron:build",
-    "electron:serve": "electron dist_electron/bundled",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
-    "test": "yarn packages:audit && yarn run lint",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run -b chrome",
-    "test:prod:build:e2e": "yarn run web:build && yarn run test:e2e:prod",
+    "lint": "vue-cli-service lint src/ cypress/ --no-fix",
+    "lint:fix": "vue-cli-service lint src/ cypress/ --fix",
+    "test:basic": "yarn packages:audit && yarn run lint",
+    
+    "web:dev": "vue-cli-service serve",
     "web:build": "vue-cli-service build --dest dist_web",
     "web:build:analyze": "ANALYZE_WEBPACK=true vue-cli-service build --dest dist_web",
-    "web:dev": "vue-cli-service serve",
+    "web:serve": "node web.js",
     "web:prod": "yarn run web:build && yarn run web:serve",
-    "web:serve": "node web.js"
+    
+    "cy:open": "cypress open",
+    "cy:run": "cypress run -b chrome",
+    "test:prod:build:e2e": "yarn run web:dev && yarn run cy:run",
+    
+    "electron:dev": "vue-cli-service electron:serve",
+    "electron:build:mac": "CSC_IDENTITY_AUTO_DISCOVERY=false vue-cli-service electron:build --dir --mac",
+    "electron:build:win": "vue-cli-service electron:build --dir --windows",
+    "electron:release:win": "vue-cli-service electron:build --windows",
+    "electron:release:mac": "vue-cli-service electron:build --mac",
+    "electron:serve": "electron dist_electron/bundled",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
   "dependencies": {
