--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,19 +103,19 @@ jobs:
           command: |
             . ~/.nvm/nvm.sh
             nvm install v18.20.5
-            nvm alias default v18.20.5
+            nvm use v18.20.5
             npm install -g yarn
       - run:
           name: Install dependencies
           command: |
             . ~/.nvm/nvm.sh
-            nvm use default
+            nvm use v18.20.5
             yarn install
       - run:
           name: Build Windows app
           command: |
             . ~/.nvm/nvm.sh
-            nvm use default
+            nvm use v18.20.5
             yarn run electron:release:win
 
 workflows:
