--- a/package.json
+++ b/package.json
@@ -16,17 +16,14 @@
     "lint": "vue-cli-service lint src/ cypress/ --no-fix",
     "lint:fix": "vue-cli-service lint src/ cypress/ --fix",
     "test:basic": "yarn packages:audit && yarn run lint",
-    
     "web:dev": "vue-cli-service serve",
     "web:build": "vue-cli-service build --dest dist_web",
     "web:build:analyze": "ANALYZE_WEBPACK=true vue-cli-service build --dest dist_web",
     "web:serve": "node web.js",
     "web:prod": "yarn run web:build && yarn run web:serve",
-    
     "cy:open": "cypress open",
     "cy:run": "cypress run -b chrome",
     "test:prod:build:e2e": "yarn run web:dev && yarn run cy:run",
-    
     "electron:dev": "vue-cli-service electron:serve",
     "electron:build:mac": "CSC_IDENTITY_AUTO_DISCOVERY=false vue-cli-service electron:build --dir --mac",
     "electron:build:win": "vue-cli-service electron:build --dir --windows",
@@ -74,6 +71,8 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
     "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@electron/notarize": "^2.5.0",
     "@testing-library/jest-dom": "5.11.9",
     "@vue/cli-plugin-babel": "^4.5.19",
