--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@electron/notarize": "^2.5.0",
     "@testing-library/jest-dom": "5.11.9",
     "@vue/cli-plugin-babel": "^4.5.19",
