use separate ssh_fingerprint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,9 @@ jobs:
       target_branch:
         type: string
         default: "gh-pages"
+      ssh_fingerprint:
+        type: string
+        default: "SHA256:NDKPWa+kMya3u32KAI0pfVcWCqpaTWqK4Nzr+8Pegh8"
     docker:
       - image: cimg/node:18.20.5
     steps:
@@ -88,7 +91,7 @@ jobs:
           docker_layer_caching: true
       - add_ssh_keys:
           fingerprints:
-            - "SHA256:NDKPWa+kMya3u32KAI0pfVcWCqpaTWqK4Nzr+8Pegh8"
+            - << parameters.ssh_fingerprint >>
       - checkout
       - run:
           name: Build GitHub Pages
@@ -216,11 +219,12 @@ workflows:
               only: master
   
   # New workflow for DevTrack gh-pages deployment
-  deploy-devtrack:
+  deploy-to-devtrack:
     jobs:
       - build-web:
           name: deploy-to-devtrack
           target_repo: "git@github.com:username/DevTrack.git"
+          ssh_fingerprint: "SHA256:yU3fmPL2vH/VjtNkLb6dgI/JKV7MDY5Dppc71sJMouE"
           filters:
             branches:
-              only: devtrack-deploy  # Create this branch when you want to trigger the workflow
+              only: develop
