--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,17 @@ jobs:
             # Get the version from package.json
             VERSION=$(node -p "require('./package.json').version")
             
+            # Check if a release with this version already exists
+            if gh release view "v$VERSION" &> /dev/null; then
+              echo "Release v$VERSION already exists. Skipping release creation."
+              exit 1
+            fi
+            
             # Get the latest commit message
             COMMIT_MSG=$(git log -1 --pretty=%B)
             
             # Create a draft release using gh cli
+            echo "Creating new release v$VERSION"
             gh release create "v$VERSION" \
               --draft \
               --title "$VERSION" \
