--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "sinon": "^19.0.2",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.7.16",
-    "webpack": "^5.97.1",
+    "webpack": "^4.46.0",
+    "vue-loader": "^15.9.8",
     "webpack-bundle-analyzer": "^3.6.0"
   },
   "resolutions": {
