--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             git fetch origin master
             
             # Get master branch version
-            MASTER_VERSION=$(git show origin/master:package.json | node -p "require(JSON.parse(require('fs').readFileSync(0, 'utf-8'))).version")
+            MASTER_VERSION=$(git show origin/master:package.json | node -p "JSON.parse(require('fs').readFileSync(0, 'utf-8')).version")
             
             # Compare versions using node semver comparison
             if node -e "process.exit(require('semver').gt('$CURRENT_VERSION', '$MASTER_VERSION') ? 0 : 1)"; then
