--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,28 +9,15 @@ jobs:
   
   check-version:
     docker:
-      - image: cimg/node:20.11
+      - image: cimg/node:18.20.5
     steps:
       - checkout
       - run:
+          name: Install dependencies
+          command: yarn add semver
+      - run:
           name: Check if version is greater than master
-          command: |
-            # Get current branch version
-            CURRENT_VERSION=$(node -p "require('./package.json').version")
-            
-            # Fetch master branch
-            git fetch origin master
-            
-            # Get master branch version
-            MASTER_VERSION=$(git show origin/master:package.json | node -p "JSON.parse(require('fs').readFileSync(0, 'utf-8')).version")
-            
-            # Compare versions using node semver comparison
-            if node -e "process.exit(require('semver').gt('$CURRENT_VERSION', '$MASTER_VERSION') ? 0 : 1)"; then
-              echo "Version $CURRENT_VERSION is greater than master version $MASTER_VERSION"
-            else
-              echo "Error: Version $CURRENT_VERSION must be greater than master version $MASTER_VERSION"
-              exit 1
-            fi
+          command: ./docker/check-version.sh
 
   test-basic:
     docker:
