--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "PomoTrack",
   "homepage": "https://github.com/dtom90/PomoTrack",
   "repository": "https://github.com/dtom90/PomoTrack",
-  "version": "0.17.1",
+  "version": "0.17.2",
   "private": true,
   "description": "An app for productive developers",
   "author": {
@@ -25,13 +25,14 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run -b chrome",
     "test:prod:build:e2e": "yarn run web:dev && yarn run cy:run",
-    "electron:dev": "vue-cli-service electron:serve",
+    "electron:dev": "echo 'electron:dev requires vue-cli-plugin-electron-builder' && exit 1",
     "electron:build:vue": "vue-cli-service build --dest dist_electron/bundled",
-    "electron:build:mac": "yarn electron:build:vue && electron-builder --mac --dir",
-    "electron:build:win": "yarn electron:build:vue && electron-builder --win --dir",
-    "electron:release:mac": "yarn electron:build:vue && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac",
-    "electron:release:win": "yarn electron:build:vue && electron-builder --win",
-    "electron:serve": "electron dist_electron/bundled",
+    "electron:prepare": "mkdir -p dist_electron && cp src/background.js dist_electron/background.js && cp src/preload.js dist_electron/preload.js && cp package.json dist_electron/package.json",
+    "electron:build:mac": "yarn electron:build:vue && yarn electron:prepare && electron-builder --mac --dir",
+    "electron:build:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win --dir",
+    "electron:release:mac": "yarn electron:build:vue && yarn electron:prepare && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac",
+    "electron:release:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win",
+    "electron:serve": "electron dist_electron/background.js",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -106,7 +107,6 @@
     "moment": "^2.29.4",
     "node-gyp": "^11.2.0",
     "sinon": "^19.0.2",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-loader": "^15.9.8",
     "webpack-bundle-analyzer": "^3.6.0"
   },
