--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: yarn add semver
+          command: yarn add semver --ignore-scripts
       - run:
           name: Check if version is greater than master
           command: ./docker/check-version.sh
