--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "PomoTrack",
   "homepage": "https://github.com/dtom90/PomoTrack",
   "repository": "https://github.com/dtom90/PomoTrack",
-  "version": "0.17.3",
+  "version": "0.17.4",
   "private": true,
   "description": "An app for productive developers",
   "author": {
@@ -30,7 +30,7 @@
     "electron:prepare": "mkdir -p dist_electron && cp src/background.js dist_electron/background.js && cp src/preload.js dist_electron/preload.js && cp package.json dist_electron/package.json",
     "electron:build:mac": "yarn electron:build:vue && yarn electron:prepare && electron-builder --mac --dir",
     "electron:build:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win --dir",
-    "electron:release:mac": "yarn electron:build:vue && yarn electron:prepare && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac",
+    "electron:release:mac": "yarn electron:build:vue && yarn electron:prepare && electron-builder --mac",
     "electron:release:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win",
     "electron:serve": "electron dist_electron/background.js",
     "postinstall": "electron-builder install-app-deps",
