--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: yarn add semver --ignore-scripts
+          command: yarn add semver
       - run:
           name: Check if version is greater than master
           command: ./docker/check-version.sh
@@ -158,7 +158,7 @@ jobs:
           command: |
             set +e
             pip install setuptools
-            yarn run install:ignore-scripts
+            yarn install
       - run:
           name: Reset xcode selection
           command: sudo xcode-select -r
