--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "url": "https://davidthomason.com/"
   },
   "scripts": {
-    "install:ignore-scripts": "yarn --ignore-scripts",
     "packages:audit": "/bin/bash -c 'yarn audit --groups dependencies; [[ $? -ge 8 ]] && exit 1 || exit 0'",
     "packages:fix": "npm_config_yes=true npx yarn-audit-fix",
     "lint": "vue-cli-service lint src/ cypress/ --no-fix",
@@ -32,9 +31,7 @@
     "electron:build:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win --dir",
     "electron:release:mac": "yarn electron:build:vue && yarn electron:prepare && electron-builder --mac",
     "electron:release:win": "yarn electron:build:vue && yarn electron:prepare && electron-builder --win",
-    "electron:serve": "electron dist_electron/background.js",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "electron:serve": "electron dist_electron/background.js"
   },
   "main": "background.js",
   "dependencies": {
@@ -88,7 +85,7 @@
     "babel-jest": "^24.8.0",
     "cypress": "^13.17.0",
     "dotenv": "^8.2.0",
-    "electron": "^36.1.0",
+    "electron": "^35.2.0",
     "electron-builder": "^26.0.12",
     "electron-devtools-installer": "^4.0.0",
     "eslint": "^7.4.0",
