--- a/vue3/PomoTrack/package.json
+++ b/vue3/PomoTrack/package.json
@@ -12,7 +12,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "bootstrap": "^4.6.2",
+    "bootstrap-vue-next": "^0.29.0",
+    "sass": "^1.87.0",
+    "vue": "^3.5.13",
+    "vue-color": "^3.0.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
