--- a/vue3/PomoTrack/package.json
+++ b/vue3/PomoTrack/package.json
@@ -12,11 +12,15 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "bootstrap": "^4.6.2",
     "bootstrap-vue-next": "^0.29.0",
     "sass": "^1.87.0",
     "vue": "^3.5.13",
     "vue-color": "^3.0.1",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
