--- a/vue3/PomoTrack/package.json
+++ b/vue3/PomoTrack/package.json
@@ -21,7 +21,7 @@
     "sass": "^1.87.0",
     "vue": "^3.5.13",
     "vue-color": "^3.0.1",
-    "vue-ctk-date-time-picker": "^3.0.0-alpha.0",
+    "vue-ctk-date-time-picker": "^2.5.0",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
   },
