working test:basic

--- a/vue3/PomoTrack/package.json
+++ b/vue3/PomoTrack/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test:basic": "npm audit && npm run type-check && npm run lint",
     "cy:open": "cypress open",
     "cy:run": "cypress run -b chrome"
   },
