--- a/vue3/PomoTrack/package.json
+++ b/vue3/PomoTrack/package.json
@@ -20,8 +20,17 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "bootstrap": "^5.3.5",
     "bootstrap-vue-next": "^0.29.0",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "color-manager": "https://github.com/dtom90/color-manager",
+    "dexie": "^4.0.11",
+    "dompurify": "^3.2.5",
+    "humanize-duration": "^3.32.1",
+    "lodash.clonedeep": "^4.5.0",
+    "marked": "^15.0.11",
     "sass": "^1.87.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-color": "^3.0.1",
     "vue-ctk-date-time-picker": "^3.0.0-alpha.0",
     "vuedraggable": "^4.1.0",
