--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   windows: circleci/windows@5
 
 jobs:
-  
+
   check-version:
     docker:
       - image: cimg/node:22.15.0
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: npm install -g semver
+          command: npm install semver
       - run:
           name: Check if version is greater than master
           command: ./docker/check-version.sh
@@ -77,7 +77,7 @@ jobs:
               --notes "## What's Changed
             
               $COMMIT_MSG"
-  
+
   publish-release:
     docker:
       - image: cimg/node:20.11
@@ -93,7 +93,7 @@ jobs:
             
             # Find and publish the draft release
             gh release edit "v$VERSION" --draft=false
-  
+
   build-web:
     parameters:
       target_repo:
@@ -252,7 +252,7 @@ workflows:
           filters:
             branches:
               only: master
-  
+
   # New workflow for DevTrack gh-pages deployment
   deploy-to-devtrack:
     jobs:
