--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.3.0",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
