--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "pomotrack",
   "version": "0.18.0",
   "private": true,
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build --outDir dist_web",
     "type-check": "vue-tsc --build",
+    "electron:dev": "electron .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test:basic": "npm audit && npm run type-check && npm run lint",
@@ -44,6 +46,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "cypress": "^14.3.2",
+    "electron": "^36.1.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
