--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-only": "vite build --outDir dist_web",
     "type-check": "vue-tsc --build",
     "electron:dev": "electron .",
+    "electron:build": "npm run build && electron-builder",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test:basic": "npm audit && npm run type-check && npm run lint",
@@ -47,6 +48,7 @@
     "@vue/tsconfig": "^0.7.0",
     "cypress": "^14.3.2",
     "electron": "^36.1.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
@@ -56,5 +58,21 @@
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
+  },
+  "build": {
+    "appId": "com.example.pomotrack",
+    "productName": "PomoTrack",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "files": [
+      "dist_web/**/*",
+      "main.js",
+      "preload.js",
+      "package.json"
+    ],
+    "mac": {
+      "target": "dmg"
+    }
   }
 }
