--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.3.0",
+    "@electron/notarize": "^3.0.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -60,8 +61,9 @@
     "vue-tsc": "^2.2.8"
   },
   "build": {
-    "appId": "com.example.pomotrack",
+    "appId": "app.pomotrack",
     "productName": "PomoTrack",
+    "publish": "github",
     "directories": {
       "output": "dist_electron"
     },
@@ -72,7 +74,16 @@
       "package.json"
     ],
     "mac": {
-      "target": "dmg"
-    }
+      "target": "dmg",
+      "category": "public.app-category.productivity",
+      "hardenedRuntime": true,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    },
+    "afterSign": "./notarize.js"
   }
 }
